--- a/index.html
+++ b/index.html
@@ -10,5 +10,24 @@
 </head>
 <body>
 
+  <div class="grid">
+
+    <div class="unit unit-s-1 unit-m-1-3">
+      <h1>Solar System</h1>
+    </div>
+
+    <nav class="unit unit-s-1-3 unit-m-1-3">
+      <ul class="nav">
+        <li><a href="#">Planets</a></li>
+        <li><a href="#">Moons</a></li>
+        <li><a href="#">Exploration</a></li>
+      </ul>
+    </nav>
+
+
+
+
+
+
 </body>
 </html>
