--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
   <div class="grid">
 
     <div class="unit unit-s-1 unit-m-1-3">
-      <h1>Solar System</h1>
+      <h1 class="logo">Solar System</h1>
     </div>
 
     <nav class="unit unit-s-1-3 unit-m-1-3">
       <ul class="nav">
-        <li><a href="#">Planets</a></li>
+        <li><a class="current" href="#">Planets</a></li>
         <li><a href="#">Moons</a></li>
         <li><a href="#">Exploration</a></li>
       </ul>
     </nav>
+
+  </div>
 
 
 
