--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
 
-  <div class="grid">
+  <div class="grid bkd">
 
-    <div class="unit unit-s-1 unit-m-1-3">
-      <h1 class="logo">Solar System</h1>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1-3">
+      <h1 class="logo pad-t-1-2">Solar System</h1>
     </div>
 
-    <nav class="unit unit-s-1-3 unit-m-1-3">
-      <ul class="nav">
-        <li><a class="current" href="#">Planets</a></li>
-        <li><a href="#">Moons</a></li>
+    <nav class="unit unit-xs-1 unit-s-1-3 unit-m-1-3 grid-middle">
+      <ul class="nav tera push-1-4 gutter-1-2">
+        <li><a class="current island-1-2" href="#">Planets</a></li>
+        <li><a class="gutter-1-2" href="#">Moons</a></li>
         <li><a href="#">Exploration</a></li>
       </ul>
     </nav>
