--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <div class="grid bkd">
 
-      <div class="unit unit-xs-1 unit-s-1 unit-m-2-3">
+      <div class="unit unit-xs-1 unit-s-1 unit-m-1-3">
         <h1 class="logo pad-t-1-2">Solar System</h1>
       </div>
 
-      <nav class="unit unit-xs-1 unit-s-1-3 unit-m-1-3 grid-middle">
+      <nav class="unit unit-xs-1 unit-s-1 unit-m-2-3 grid-middle">
         <ul class="nav tera push-1-4 gutter-1-2">
           <li><a class="current island-1-2" href="#">Planets</a></li>
           <li><a class="gutter-1-2" href="#">Moons</a></li>
